movie file upload

--- a/vdchecker/Base.lproj/Main_iPhone.storyboard
+++ b/vdchecker/Base.lproj/Main_iPhone.storyboard
@@ -138,7 +138,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="check_1.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qmr-UR-oYQ">
-                                <rect key="frame" x="0.0" y="64" width="320" height="524"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NAs-MF-LRJ">
                                 <rect key="frame" x="32" y="373" width="113" height="30"/>
@@ -246,7 +246,7 @@
                             <tableViewSection id="tQM-gZ-97P">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="QmA-4p-P9a">
-                                        <rect key="frame" x="0.0" y="64" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="44" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QmA-4p-P9a" id="iND-m4-fP7">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -262,7 +262,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="120" id="Bme-mA-6FX">
-                                        <rect key="frame" x="0.0" y="124" width="320" height="120"/>
+                                        <rect key="frame" x="0.0" y="104" width="320" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bme-mA-6FX" id="CTp-PE-rOn">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
@@ -275,7 +275,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="120" id="nkA-cB-XkX">
-                                        <rect key="frame" x="0.0" y="244" width="320" height="120"/>
+                                        <rect key="frame" x="0.0" y="224" width="320" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nkA-cB-XkX" id="jqg-k8-yCH">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
@@ -292,7 +292,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="PeS-32-NLr">
-                                        <rect key="frame" x="0.0" y="364" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="344" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PeS-32-NLr" id="FSx-G1-dOI">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -305,7 +305,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="120" id="x7F-Kv-749">
-                                        <rect key="frame" x="0.0" y="424" width="320" height="120"/>
+                                        <rect key="frame" x="0.0" y="404" width="320" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x7F-Kv-749" id="sCO-s2-05C">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
@@ -322,7 +322,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="oO1-vv-TQs">
-                                        <rect key="frame" x="0.0" y="544" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="524" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oO1-vv-TQs" id="YSX-al-NTt">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -335,7 +335,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="120" id="Cev-Rt-V7q">
-                                        <rect key="frame" x="0.0" y="604" width="320" height="120"/>
+                                        <rect key="frame" x="0.0" y="584" width="320" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cev-Rt-V7q" id="GtP-TK-sQP">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
@@ -352,7 +352,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="sra-yP-CQh">
-                                        <rect key="frame" x="0.0" y="724" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="704" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sra-yP-CQh" id="IBf-lf-Uw8">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -365,7 +365,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="120" id="WiG-FL-paY">
-                                        <rect key="frame" x="0.0" y="784" width="320" height="120"/>
+                                        <rect key="frame" x="0.0" y="764" width="320" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WiG-FL-paY" id="uFq-eL-6nu">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
@@ -382,7 +382,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Lvl-W4-06Z">
-                                        <rect key="frame" x="0.0" y="904" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="884" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lvl-W4-06Z" id="37x-Qx-lWg">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -398,7 +398,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="OSA-91-dc5">
-                                        <rect key="frame" x="0.0" y="964" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="944" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OSA-91-dc5" id="lTv-9n-I0M">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -414,7 +414,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1PS-cV-X0m">
-                                        <rect key="frame" x="0.0" y="1024" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="1004" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1PS-cV-X0m" id="GX7-EG-x67">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
@@ -712,7 +712,7 @@
         <!--Vd About-->
         <scene sceneID="NPo-u1-aRl">
             <objects>
-                <viewController id="OMn-Lt-pgb" customClass="vdAbout" customModule="vdchecker" sceneMemberID="viewController">
+                <viewController id="OMn-Lt-pgb" customClass="vdAbout" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hEq-0W-ysH"/>
                         <viewControllerLayoutGuide type="bottom" id="aPT-ur-zQD"/>
@@ -1196,8 +1196,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="s08-4N-lG5">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s08-4N-lG5" id="DFT-VJ-1r6">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -1333,6 +1335,9 @@
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="uploadImage:" destination="521-sN-2pV" eventType="touchUpInside" id="KI8-Qq-QyI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1340,6 +1345,9 @@
                     <navigationItem key="navigationItem" id="9Q0-Fx-TNH"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="aImageView" destination="1fa-DA-PDj" id="Kjk-HV-QGs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RLA-hz-00e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
